--- a/index.html
+++ b/index.html
@@ -1,33 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100">
     <head>
+        <title>Josefine Kihlström</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
             type="text/css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
-        <link rel="stylesheet" href="assets/css/style.css" />
-        <title>Josefine Kihlström</title>
+        <link rel="stylesheet" href="main.css"/>
     </head>
     <body>
         <!-- Header -->
         <header>
-
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Navbar</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                      <a class="nav-link" href="#">About Me</a>
+                      <a class="nav-link" href="#">Skills</a>
+                      <a class="nav-link" href="#">Recent Projects</a>
+                      <a class="nav-link" href="#">Contact</a>
+                    </div>
+                  </div>
+                </div>
+              </nav>
         </header>
         <!-- CV section -->
         <section>
-
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 hero-1">
+                        <div class="hero-1-text slide-left slide-right">
+                            <h3 class="text-white roboto">Hi, my name is</h3>
+                            <br>
+                            <br>
+                            <h1 class="text-white apple mb-4">Josefine Kihlström</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- Footer -->
-        <footer>
-
+        <footer class="footer fixed-bottom mt-auto py-3 bg-light">
+            <div class="container">
+              <span class="text-muted">Hello</span>
+            </div>
         </footer>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+        <!-- Bootstrap bundle with popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
