--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-            type="text/css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
         <link rel="stylesheet" href="main.css"/>
     </head>
@@ -15,7 +14,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Navbar</a>
+                  <a class="navbar-brand" href="#">Josefine Kihlström</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -23,6 +22,7 @@
                     <div class="navbar-nav">
                       <a class="nav-link" href="#">About Me</a>
                       <a class="nav-link" href="#">Skills</a>
+                      <a class="nav-link" href="#">Work/Education</a>
                       <a class="nav-link" href="#">Recent Projects</a>
                       <a class="nav-link" href="#">Contact</a>
                     </div>
@@ -33,20 +33,156 @@
         <!-- CV section -->
         <section>
             <div class="container-fluid">
+                <!-- Hero row -->
                 <div class="row">
                     <div class="col-12 hero-1">
                         <div class="hero-1-text slide-left slide-right">
-                            <h3 class="text-white roboto">Hi, my name is</h3>
-                            <br>
-                            <br>
                             <h1 class="text-white apple mb-4">Josefine Kihlström</h1>
+                            <h3 class="text-white roboto">Junior Full Stack Developer</h3>
                         </div>
+                    </div>
+                </div>
+                <!-- About row -->
+                <div class="row about-row">
+                    <div class="col-6 mt-5 mb-5">
+                        bild
+                    </div>
+                    <div class="col-6 mt-5 mb-5">
+                        <h4>
+                            Hi,
+                        </h4>
+                        <br>
+                        <p class="roboto about-text">
+                            My name is Josefine and I'm 28 years old currently living in Södertälje, Sweden.
+                            <br>
+                            I am a recent Full Stack Developer graduate with a great interest in the visual parts of programming.
+                            <br>
+                            <br>
+                            I have a working background from visual 
+                            communication in retail and in my teens I studied art and design.
+                            <br>
+                            I'm convenient in both frontend and backend programming with 
+                            key 
+                            skills in HTML5, CSS, JavaScript and Python. 
+                            <br>
+                            <br>
+                            Writing code and 
+                            solving problems makes me constantly want to develop and learn 
+                            new technologies in programming.
+                            <br>
+                            I'm dedicated and driven to offer 
+                            my qualities with a positive attitude in an environment with like-minded people.
+                        </p>
+                    </div>
+                </div>
+                <!-- Technical skills -->
+                <div class="row">
+                    <div class="col-8 mt-5 mb-5 roboto">
+                        <h4>Technical Skills</h4>
+                        <br>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">HTML / HTML5</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+                                <span class="sr-only">70% complete</span>
+                            </div>
+                            <span class="progress-type">JavaScript / jQuery</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">Django / Python</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">SQL / NoSQL</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- Work and education section -->
+                <div class="row">
+                    <div class="col-6 mt-5 mb-5">
+                        <h4 class="text-center">
+                            Work History
+                        </h4>
+                        <hr class="hr-w">
+                        <br>
+                        <p class="font-weight-bold mb-0">Lindex AB, STOCKHOLM</p>
+                        <p>Visual Merchandiser</p>
+                        <p class="text-muted">2018 - CURRENT</p>
+                        <br>
+                        <p class="font-weight-bold mb-0">Lindex AB, ESKILSTUNA</p>
+                        <p>Visual Merchandiser</p>
+                        <p class="text-muted">2016 - 2018</p>
+                    </div>
+                    <div class="col-6 mt-5">
+                        <h4 class="text-center">
+                            Education
+                        </h4>
+                        <hr class="hr-w">
+                        <br>
+                        <p class="font-weight-bold mb-0">Code Institute</p>
+                        <p>Full Stack Developer </p>
+                        <p class="text-muted">Certificate Issued on August 31, 2021</p>
+                        <br>
+                        <p class="font-weight-bold mb-0">Handelsakademin</p>
+                        <p>Visual Merchandiser</p>
+                        <p class="text-muted">Certificate Issued June, 2016</p>
+                    </div>
+                </div>
+                <!-- Social section -->
+                <div class="row text-center">
+                    <div class="col-4 mt-5 mb-5">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                    <div class="col-4 mt-5 mb-5">
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                    <div class="col-4 mt-5 mb-5">
+                     social   
+                    </div>
+                </div>
+                <!-- Projects section -->
+                <div class="row">
+                    <div class="col-12">
+                        <h4 class="">
+                            Recent Projects
+                        </h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 mt-5 mb-5">
+                        bild
+                    </div>
+                    <div class="col-6 mt-5 mb-5">
+                        bild
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 mt-5 mb-5">
+                        bild
+                    </div>
+                    <div class="col-6 mt-5 mb-5">
+                        bild
                     </div>
                 </div>
             </div>
         </section>
         <!-- Footer -->
-        <footer class="footer fixed-bottom mt-auto py-3 bg-light">
+        <footer class="footer mt-auto py-3 bg-light">
             <div class="container">
               <span class="text-muted">Hello</span>
             </div>
