--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <!-- About row -->
                 <div class="row about-row">
                     <div class="col-6 mt-5 mb-5">
-                        bild
+                        <img src="img/josefine.jpg" alt="image of Josefine" class="josefine-img">
                     </div>
-                    <div class="col-6 mt-5 mb-5">
+                    <div class="col-6 mt-5 mb-5 about-col">
                         <h4>
                             Hi,
                         </h4>
@@ -73,6 +73,9 @@
                             I'm dedicated and driven to offer 
                             my qualities with a positive attitude in an environment with like-minded people.
                         </p>
+                        <br>
+                        <br>
+                        <h3 class="apple">Josefine</h3>
                     </div>
                 </div>
                 <!-- Technical skills -->
