edited text and added background colors

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
         <link rel="stylesheet" href="main.css"/>
+        <script src="https://kit.fontawesome.com/c7d20509be.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- Header -->
@@ -79,9 +79,10 @@
                     </div>
                 </div>
                 <!-- Technical skills -->
-                <div class="row">
-                    <div class="col-8 mt-5 mb-5 roboto">
-                        <h4>Technical Skills</h4>
+                <div class="row justify-content-center">
+                    <div class="col-6 mt-5 mb-5 roboto">
+                        <h4 class="text-center text-uppercase letter-spacing">Technical Skills</h4>
+                        <hr class="hr-w">
                         <br>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
@@ -89,70 +90,75 @@
                             </div>
                             <span class="progress-type">HTML / HTML5</span>
                         </div>
+                        <br>
                         <div class="progress">
                             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">CSS / CSS3</span>
                         </div>
+                        <br>
                         <div class="progress">
                             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
                                 <span class="sr-only">70% complete</span>
                             </div>
                             <span class="progress-type">JavaScript / jQuery</span>
                         </div>
+                        <br>
                         <div class="progress">
                             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">Django / Python</span>
                         </div>
+                        <br>
                         <div class="progress">
                             <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">SQL / NoSQL</span>
                         </div>
+                        <br>
                     </div>
                 </div>
                 <!-- Work and education section -->
                 <div class="row">
-                    <div class="col-6 mt-5 mb-5">
-                        <h4 class="text-center">
+                    <div class="col-6 mb-5 p-5 work-col text-center">
+                        <h4 class=" text-uppercase letter-spacing">
                             Work History
                         </h4>
-                        <hr class="hr-w">
+                        <hr class="hr-w hr-color">
                         <br>
                         <p class="font-weight-bold mb-0">Lindex AB, STOCKHOLM</p>
                         <p>Visual Merchandiser</p>
-                        <p class="text-muted">2018 - CURRENT</p>
+                        <p class="">2018 - CURRENT</p>
                         <br>
                         <p class="font-weight-bold mb-0">Lindex AB, ESKILSTUNA</p>
                         <p>Visual Merchandiser</p>
-                        <p class="text-muted">2016 - 2018</p>
+                        <p class="">2016 - 2018</p>
                     </div>
-                    <div class="col-6 mt-5">
-                        <h4 class="text-center">
+                    <div class="col-6 mb-5 p-5 education-col text-center">
+                        <h4 class=" text-uppercase letter-spacing">
                             Education
                         </h4>
-                        <hr class="hr-w">
+                        <hr class="hr-w hr-color">
                         <br>
                         <p class="font-weight-bold mb-0">Code Institute</p>
                         <p>Full Stack Developer </p>
-                        <p class="text-muted">Certificate Issued on August 31, 2021</p>
+                        <p class="">Certificate Issued on August 31, 2021</p>
                         <br>
                         <p class="font-weight-bold mb-0">Handelsakademin</p>
                         <p>Visual Merchandiser</p>
-                        <p class="text-muted">Certificate Issued June, 2016</p>
+                        <p class="">Certificate Issued June, 2016</p>
                     </div>
                 </div>
                 <!-- Social section -->
                 <div class="row text-center">
                     <div class="col-4 mt-5 mb-5">
-                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fab fa-linkedin"></i>
                     </div>
                     <div class="col-4 mt-5 mb-5">
-                        <i class="fa-brands fa-github"></i>
+                        <i class="fab fa-github"></i>
                     </div>
                     <div class="col-4 mt-5 mb-5">
                      social   
@@ -161,7 +167,7 @@
                 <!-- Projects section -->
                 <div class="row">
                     <div class="col-12">
-                        <h4 class="">
+                        <h4 class="text-uppercase letter-spacing">
                             Recent Projects
                         </h4>
                     </div>
