--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 </div>
                 <!-- About row -->
                 <div class="row about-row">
-                    <div class="col-6 mt-5 mb-5">
+                    <div class="col-md-6 mt-5 mb-5">
                         <img src="img/josefine.jpg" alt="image of Josefine" class="josefine-img">
                     </div>
-                    <div class="col-6 mt-5 mb-5 about-col">
+                    <div class="col-md-6 mt-5 mb-5 about-col">
                         <h4>
                             Hi,
                         </h4>
@@ -80,7 +80,7 @@
                 </div>
                 <!-- Technical skills -->
                 <div class="row justify-content-center">
-                    <div class="col-6 mt-5 mb-5 roboto">
+                    <div class="col-md-6 mt-5 mb-5 roboto">
                         <h4 class="text-center text-uppercase letter-spacing">Technical Skills</h4>
                         <hr class="hr-w">
                         <br>
@@ -123,7 +123,7 @@
                 </div>
                 <!-- Work and education section -->
                 <div class="row">
-                    <div class="col-6 mb-5 p-5 work-col text-center">
+                    <div class="col-sm-6 mb-5 p-5 work-col text-center">
                         <h4 class=" text-uppercase letter-spacing">
                             Work History
                         </h4>
@@ -137,7 +137,7 @@
                         <p>Visual Merchandiser</p>
                         <p class="">2016 - 2018</p>
                     </div>
-                    <div class="col-6 mb-5 p-5 education-col text-center">
+                    <div class="col-sm-6 mb-5 p-5 education-col text-center">
                         <h4 class=" text-uppercase letter-spacing">
                             Education
                         </h4>
@@ -166,25 +166,26 @@
                 </div>
                 <!-- Projects section -->
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 text-center">
                         <h4 class="text-uppercase letter-spacing">
                             Recent Projects
                         </h4>
+                        <hr class="hr-w">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6 mt-5 mb-5">
+                    <div class="col-md-6 mt-5 mb-5">
                         bild
                     </div>
-                    <div class="col-6 mt-5 mb-5">
+                    <div class="col-md-6 mt-5 mb-5">
                         bild
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6 mt-5 mb-5">
+                    <div class="col-md-6 mt-5 mb-5">
                         bild
                     </div>
-                    <div class="col-6 mt-5 mb-5">
+                    <div class="col-md-6 mt-5 mb-5">
                         bild
                     </div>
                 </div>
