added project images

--- a/index.html
+++ b/index.html
@@ -173,20 +173,36 @@
                         <hr class="hr-w">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row text-center">
                     <div class="col-md-6 mt-5 mb-5">
-                        bild
+                        <img src="img/uponwonder.png" alt="image of project website" class="project-img">
+                        <br>
+                        <br>
+                        <h5>Upon Wonder - Band website</h5>
+                        <p>Project description</p>
                     </div>
                     <div class="col-md-6 mt-5 mb-5">
-                        bild
+                        <img src="img/plantmemory.png" alt="image of project website" class="project-img">
+                        <br>
+                        <br>
+                        <h5>Plant Memory</h5>
+                        <p>Project description</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row text-center">
                     <div class="col-md-6 mt-5 mb-5">
-                        bild
+                        <img src="img/kitchen.png" alt="image of project website" class="project-img">
+                        <br>
+                        <br>
+                        <h5>Kitchen - Recipe website</h5>
+                        <p>Project description</p>
                     </div>
                     <div class="col-md-6 mt-5 mb-5">
-                        bild
+                        <img src="img/lauraday.jpg" alt="image of project website" class="project-img">
+                        <br>
+                        <br>
+                        <h5>Laura Day - E-commerce store</h5>
+                        <p>Project description</p>
                     </div>
                 </div>
             </div>
