rm social section and added icons to footer

--- a/index.html
+++ b/index.html
@@ -152,18 +152,6 @@
                         <p class="">Certificate Issued June, 2016</p>
                     </div>
                 </div>
-                <!-- Social section -->
-                <div class="row text-center">
-                    <div class="col-4 mt-5 mb-5">
-                        <i class="fab fa-linkedin"></i>
-                    </div>
-                    <div class="col-4 mt-5 mb-5">
-                        <i class="fab fa-github"></i>
-                    </div>
-                    <div class="col-4 mt-5 mb-5">
-                     social   
-                    </div>
-                </div>
                 <!-- Projects section -->
                 <div class="row">
                     <div class="col-12 text-center">
@@ -210,7 +198,18 @@
         <!-- Footer -->
         <footer class="footer mt-auto py-3 bg-light">
             <div class="container">
-              <span class="text-muted">Hello</span>
+                <div class="row text-center">
+                    <div class="col-md-4">
+                        <span class="text-muted">Hello</span>
+                    </div>
+                    <div class="col-md-4">
+                        Contact
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fab fa-github"></i>
+                        <i class="fab fa-linkedin"></i>
+                    </div>
+                </div>
             </div>
         </footer>
         <!-- Bootstrap bundle with popper -->
