added contact section

--- a/index.html
+++ b/index.html
@@ -193,21 +193,37 @@
                         <p>Project description</p>
                     </div>
                 </div>
+                <!-- Contact section -->
+                <div class="row">
+                    <div class="col-12 text-center p-5 contact-col">
+                        <h2 class="text-uppercase letter-spacing">
+                            Want to get in touch with me?
+                        </h2>
+                        <p>Dont hesitate to ...</p>
+                    </div>
+                </div>
+                <div class="row contact-col text-center pb-5">
+                    <div class="col-md-4">
+                        <i class="fas fa-phone fa-3x"></i>
+                        <p>+46 736 82 74 66</p>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fas fa-envelope fa-3x"></i>
+                        <p>josefine.kihlstrm@gmail.com</p>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fab fa-linkedin fa-3x"></i>
+                        <p>Send me a message on LinkedIn!</p>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Footer -->
         <footer class="footer mt-auto py-3 bg-light">
             <div class="container">
                 <div class="row text-center">
-                    <div class="col-md-4">
-                        <span class="text-muted">Hello</span>
-                    </div>
-                    <div class="col-md-4">
-                        Contact
-                    </div>
-                    <div class="col-md-4">
-                        <i class="fab fa-github"></i>
-                        <i class="fab fa-linkedin"></i>
+                    <div class="col-12">
+                        <span class="text-muted">© Josefine Kihlström</span>
                     </div>
                 </div>
             </div>
