added footer styling

--- a/index.html
+++ b/index.html
@@ -199,7 +199,6 @@
                         <h2 class="text-uppercase letter-spacing">
                             Want to get in touch with me?
                         </h2>
-                        <p>Dont hesitate to ...</p>
                     </div>
                 </div>
                 <div class="row contact-col text-center pb-5">
@@ -223,7 +222,7 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-12">
-                        <span class="text-muted">© Josefine Kihlström</span>
+                        <span>© Josefine Kihlström</span>
                     </div>
                 </div>
             </div>
