--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="col-12 hero-1">
                         <div class="hero-1-text slide-left slide-right">
                             <h1 class="text-white apple mb-4">Josefine Kihlström</h1>
-                            <h3 class="text-white roboto">Junior Full Stack Developer</h3>
+                            <h3 class="text-white roboto text-uppercase">Junior Full Stack Developer</h3>
                         </div>
                     </div>
                 </div>
