make project images to links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                      <a class="nav-link" href="#">About Me</a>
+                      <a class="nav-link" href="#">| About Me</a>
                       <a class="nav-link" href="#">Skills</a>
                       <a class="nav-link" href="#">Work/Education</a>
                       <a class="nav-link" href="#">Recent Projects</a>
@@ -163,14 +163,22 @@
                 </div>
                 <div class="row text-center">
                     <div class="col-md-6 mt-5 mb-5">
-                        <img src="img/uponwonder.png" alt="image of project website" class="project-img">
+                        <div class="zoom">
+                            <a href="https://github.com/Josefinekihlstrom/Upon-Wonder" target="_blank">
+                                <img src="img/uponwonder.png" alt="image of project website" class="project-img">
+                            </a>
+                        </div>
                         <br>
                         <br>
                         <h5>Upon Wonder - Band website</h5>
                         <p>Project description</p>
                     </div>
                     <div class="col-md-6 mt-5 mb-5">
-                        <img src="img/plantmemory.png" alt="image of project website" class="project-img">
+                        <div class="zoom">
+                            <a href="https://github.com/Josefinekihlstrom/Plant-Memory" target="_blank">
+                                <img src="img/plantmemory.png" alt="image of project website" class="project-img">
+                            </a>
+                        </div>
                         <br>
                         <br>
                         <h5>Plant Memory</h5>
@@ -179,14 +187,22 @@
                 </div>
                 <div class="row text-center">
                     <div class="col-md-6 mt-5 mb-5">
-                        <img src="img/kitchen.png" alt="image of project website" class="project-img">
+                        <div class="zoom">
+                            <a href="https://github.com/Josefinekihlstrom/Kitchen" target="_blank">
+                                <img src="img/kitchen.png" alt="image of project website" class="project-img">
+                            </a>
+                        </div>
                         <br>
                         <br>
                         <h5>Kitchen - Recipe website</h5>
                         <p>Project description</p>
                     </div>
                     <div class="col-md-6 mt-5 mb-5">
-                        <img src="img/lauraday.jpg" alt="image of project website" class="project-img">
+                        <div class="zoom">
+                            <a href="https://github.com/Josefinekihlstrom/LauraDay" target="_blank">
+                                <img src="img/lauraday.jpg" alt="image of project website" class="project-img">
+                            </a>
+                        </div>
                         <br>
                         <br>
                         <h5>Laura Day - E-commerce store</h5>
