styled icons and hero text

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <!-- Hero row -->
                 <div class="row">
                     <div class="col-12 hero-1">
-                        <div class="hero-1-text slide-left slide-right">
+                        <div class="hero-1-text">
                             <h1 class="text-white apple mb-4">Josefine Kihlström</h1>
-                            <h3 class="text-white roboto text-uppercase">Junior Full Stack Developer</h3>
+                            <h3 class="text-white roboto text-uppercase line-1 anim-typewriter">Junior Full Stack Developer</h3>
                         </div>
                     </div>
                 </div>
@@ -215,20 +215,24 @@
                         <h2 class="text-uppercase letter-spacing">
                             Want to get in touch with me?
                         </h2>
+                        <hr class="hr-w">
                     </div>
                 </div>
                 <div class="row contact-col text-center pb-5">
-                    <div class="col-md-4">
-                        <i class="fas fa-phone fa-3x"></i>
-                        <p>+46 736 82 74 66</p>
+                    <div class="col-4">
+                        <a href="tel:123-456-7890">
+                            <i class="fas fa-phone fa-3x"></i>
+                        </a>
                     </div>
-                    <div class="col-md-4">
-                        <i class="fas fa-envelope fa-3x"></i>
-                        <p>josefine.kihlstrm@gmail.com</p>
+                    <div class="col-4">
+                        <a href="mailto:josefine.kihlstrm@gmail.com">
+                            <i class="fas fa-envelope fa-3x"></i>
+                        </a>
                     </div>
-                    <div class="col-md-4">
-                        <i class="fab fa-linkedin fa-3x"></i>
-                        <p>Send me a message on LinkedIn!</p>
+                    <div class="col-4">
+                        <a href="https://se.linkedin.com/in/josefine-kihlstrom" target="_blank">
+                            <i class="fab fa-linkedin fa-3x"></i>
+                        </a>
                     </div>
                 </div>
             </div>
