added responsive styling to hero text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="row">
                     <div class="col-12 hero-1">
                         <div class="hero-1-text">
-                            <h1 class="text-white apple mb-4">Josefine Kihlström</h1>
+                            <h1 class="text-white apple mb-4 josefine-text">Josefine Kihlström</h1>
                             <h3 class="text-white roboto text-uppercase line-1 anim-typewriter">Junior Full Stack Developer</h3>
                         </div>
                     </div>
