changed text color and removed unnecessary styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                      <a class="nav-link" href="#">| About Me</a>
+                      <a class="nav-link" href="#">About Me</a>
                       <a class="nav-link" href="#">Skills</a>
                       <a class="nav-link" href="#">Work/Education</a>
                       <a class="nav-link" href="#">Recent Projects</a>
