added timeline to work history

--- a/index.html
+++ b/index.html
@@ -123,31 +123,45 @@
                 </div>
                 <!-- Work and education section -->
                 <div class="row">
-                    <div class="col-sm-6 mb-5 p-5 work-col text-center">
-                        <h4 class=" text-uppercase letter-spacing">
+                    <div class="col-sm-4 mb-5 p-5 work-col">
+                        <h4 class="text-uppercase letter-spacing text-center">
                             Work History
                         </h4>
                         <hr class="hr-w hr-color">
                         <br>
-                        <p class="font-weight-bold mb-0">Lindex AB, STOCKHOLM</p>
-                        <p>Visual Merchandiser</p>
-                        <p class="">2018 - CURRENT</p>
-                        <br>
-                        <p class="font-weight-bold mb-0">Lindex AB, ESKILSTUNA</p>
-                        <p>Visual Merchandiser</p>
-                        <p class="">2016 - 2018</p>
+                        <ul class="timeline">
+                            <li>
+                                <p class="font-weight-bold mb-0">Lindex AB, STOCKHOLM</p>
+                                <p class="float-right">2018 - NOW</p>
+                                <p>Visual Merchandiser</p>
+                                <p>St. Eriksgatan 37</p>
+                            </li>
+                            <br>
+                            <li>
+                                <p class="font-weight-bold mb-0">Lindex AB, ESKILSTUNA</p>
+                                <p class="float-right">2016 - 2018</p>
+                                <p>Visual Merchandiser</p>
+                                <p>Tuna Park</p>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="col-sm-6 mb-5 p-5 education-col text-center">
+                    <div class="col-sm-4 mb-5 p-5 skills-col">
+                        <h4 class="text-uppercase letter-spacing text-center">
+                            Key Skills
+                        </h4>
+                        <hr class="hr-w hr-color-2">
+                    </div>
+                    <div class="col-sm-4 mb-5 p-5 education-col text-center">
                         <h4 class=" text-uppercase letter-spacing">
                             Education
                         </h4>
                         <hr class="hr-w hr-color">
                         <br>
-                        <p class="font-weight-bold mb-0">Code Institute</p>
+                        <p class="font-weight-bold mb-0 text-uppercase">Code Institute</p>
                         <p>Full Stack Developer </p>
                         <p class="">Certificate Issued on August 31, 2021</p>
                         <br>
-                        <p class="font-weight-bold mb-0">Handelsakademin</p>
+                        <p class="font-weight-bold mb-0 text-uppercase">Handelsakademin</p>
                         <p>Visual Merchandiser</p>
                         <p class="">Certificate Issued June, 2016</p>
                     </div>
