added key skills section

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 </div>
                 <!-- Work and education section -->
                 <div class="row">
+                    <!-- Work history -->
                     <div class="col-sm-4 mb-5 p-5 work-col">
                         <h4 class="text-uppercase letter-spacing text-center">
                             Work History
@@ -145,12 +146,51 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- Key Skills -->
                     <div class="col-sm-4 mb-5 p-5 skills-col">
                         <h4 class="text-uppercase letter-spacing text-center">
                             Key Skills
                         </h4>
                         <hr class="hr-w hr-color-2">
+                        <br>
+                        <div class="row text-center">
+                            <div class="col-6 skills-list">
+                                <p>
+                                    Bootstrap
+                                </p>
+                                <i class="fas fa-star pb-3"></i>
+                                <p>
+                                    Heroku
+                                </p>
+                                <i class="fas fa-star pb-3"></i>
+                                <p>
+                                    GitHub
+                                </p>
+                                <i class="fas fa-star pb-3"></i>
+                                <p>
+                                    Figma
+                                </p>
+                            </div>
+                            <div class="col-6 skills-list">
+                                <p>
+                                    Materialize
+                                </p>
+                                <i class="fas fa-star pb-3"></i>
+                                <p>
+                                    MongoDB
+                                </p>
+                                <i class="fas fa-star pb-3"></i>
+                                <p>
+                                    AWS S3
+                                </p>
+                                <i class="fas fa-star pb-3"></i>
+                                <p>
+                                    Balsamiq
+                                </p>
+                            </div>
+                        </div>
                     </div>
+                    <!-- Education -->
                     <div class="col-sm-4 mb-5 p-5 education-col text-center">
                         <h4 class=" text-uppercase letter-spacing">
                             Education
@@ -160,7 +200,7 @@
                         <p class="font-weight-bold mb-0 text-uppercase">Code Institute</p>
                         <p>Full Stack Developer </p>
                         <p class="">Certificate Issued on August 31, 2021</p>
-                        <br>
+                        <i class="fas fa-graduation-cap fa-2x pb-3"></i>
                         <p class="font-weight-bold mb-0 text-uppercase">Handelsakademin</p>
                         <p>Visual Merchandiser</p>
                         <p class="">Certificate Issued June, 2016</p>
