fixed responsive styling for skills section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <!-- Work and education section -->
                 <div class="row">
                     <!-- Work history -->
-                    <div class="col-sm-4 mb-5 p-5 work-col">
+                    <div class="col-lg-4 mb-5 p-5 work-col">
                         <h4 class="text-uppercase letter-spacing text-center">
                             Work History
                         </h4>
@@ -147,7 +147,7 @@
                         </ul>
                     </div>
                     <!-- Key Skills -->
-                    <div class="col-sm-4 mb-5 p-5 skills-col">
+                    <div class="col-lg-4 mb-5 p-5 skills-col">
                         <h4 class="text-uppercase letter-spacing text-center">
                             Key Skills
                         </h4>
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                     <!-- Education -->
-                    <div class="col-sm-4 mb-5 p-5 education-col text-center">
+                    <div class="col-lg-4 mb-5 p-5 education-col text-center">
                         <h4 class=" text-uppercase letter-spacing">
                             Education
                         </h4>
