--- a/index.html
+++ b/index.html
@@ -85,35 +85,35 @@
                         <hr class="hr-w">
                         <br>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                            <div class="progress-bar bg-gradient" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
                                 <span class="sr-only">90% complete</span>
                             </div>
                             <span class="progress-type">HTML / HTML5</span>
                         </div>
                         <br>
                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                            <div class="progress-bar bg-gradient" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">CSS / CSS3</span>
                         </div>
                         <br>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+                            <div class="progress-bar bg-gradient" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
                                 <span class="sr-only">70% complete</span>
                             </div>
                             <span class="progress-type">JavaScript / jQuery</span>
                         </div>
                         <br>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                            <div class="progress-bar bg-gradient" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">Django / Python</span>
                         </div>
                         <br>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                            <div class="progress-bar bg-gradient" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">SQL / NoSQL</span>
@@ -275,17 +275,17 @@
                 <div class="row contact-col text-center pb-5">
                     <div class="col-4">
                         <a href="tel:123-456-7890">
-                            <i class="fas fa-phone fa-3x"></i>
+                            <i class="fas fa-phone fa-3x fa-spin-hover"></i>
                         </a>
                     </div>
                     <div class="col-4">
                         <a href="mailto:josefine.kihlstrm@gmail.com">
-                            <i class="fas fa-envelope fa-3x"></i>
+                            <i class="fas fa-envelope fa-3x fa-spin-hover"></i>
                         </a>
                     </div>
                     <div class="col-4">
                         <a href="https://se.linkedin.com/in/josefine-kihlstrom" target="_blank">
-                            <i class="fab fa-linkedin fa-3x"></i>
+                            <i class="fab fa-linkedin-in fa-3x fa-spin-hover"></i>
                         </a>
                     </div>
                 </div>
