added links to navbar

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                      <a class="nav-link" href="#">About Me</a>
-                      <a class="nav-link" href="#">Skills</a>
-                      <a class="nav-link" href="#">Work/Education</a>
-                      <a class="nav-link" href="#">Recent Projects</a>
-                      <a class="nav-link" href="#">Contact</a>
+                      <a class="nav-link" href="#about-me">About Me</a>
+                      <a class="nav-link" href="#skills">Skills</a>
+                      <a class="nav-link" href="#work-edu">Work/Education</a>
+                      <a class="nav-link" href="#projects">Recent Projects</a>
+                      <a class="nav-link" href="#contact">Contact</a>
                     </div>
                   </div>
                 </div>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <!-- About row -->
-                <div class="row about-row">
+                <div class="row about-row" id="about-me">
                     <div class="col-md-6 mt-5 mb-5">
                         <img src="img/josefine.jpg" alt="image of Josefine" class="josefine-img">
                     </div>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <!-- Technical skills -->
-                <div class="row justify-content-center">
+                <div class="row justify-content-center" id="skills">
                     <div class="col-md-6 mt-5 mb-5 roboto">
                         <h4 class="text-center text-uppercase letter-spacing">Technical Skills</h4>
                         <hr class="hr-w">
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <!-- Work and education section -->
-                <div class="row">
+                <div class="row" id="work-edu">
                     <!-- Work history -->
                     <div class="col-lg-4 mb-5 p-5 work-col">
                         <h4 class="text-uppercase letter-spacing text-center">
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <!-- Projects section -->
-                <div class="row">
+                <div class="row" id="projects">
                     <div class="col-12 text-center">
                         <h4 class="text-uppercase letter-spacing">
                             Recent Projects
@@ -264,7 +264,7 @@
                     </div>
                 </div>
                 <!-- Contact section -->
-                <div class="row">
+                <div class="row" id="contact">
                     <div class="col-12 text-center p-5 contact-col">
                         <h2 class="text-uppercase letter-spacing">
                             Want to get in touch with me?
