--- a/index.html
+++ b/index.html
@@ -292,11 +292,19 @@
             </div>
         </section>
         <!-- Footer -->
-        <footer class="footer mt-auto py-3 bg-light">
-            <div class="container">
-                <div class="row text-center">
-                    <div class="col-12">
-                        <span>© Josefine Kihlström</span>
+        <footer class="footer mt-auto bg-light">
+            <div class="container footer-container">
+                <div class="row no-gutters">
+                    <div class="col-md-5 pt-3 pb-3 pl-3">
+                        <p class="text-uppercase font-weight-bold mb-0">Josefine Kihlström</p>
+                        <p class="mb-0"><small>Junior Fullstack Developer</small></p>
+                        <p class="mb-0"><small>+46 736 82 74 66</small></p>
+                        <p><small>josefine.kihlstrm@gmail.com</small></p>
+                        <br>
+                        <span>© Josefine Kihlström 2021</span>
+                    </div>
+                    <div class="col-md-7 map-section">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32702.030855430392!2d17.58512786253686!3d59.18463574169515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f129654e2e8ef%3A0x7cdd1e291856146c!2zU8O2ZGVydMOkbGpl!5e0!3m2!1ssv!2sse!4v1636820696351!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
             </div>
