added information to project section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <!-- About row -->
                 <div class="row about-row" id="about-me">
-                    <div class="col-md-6 mt-5 mb-5">
+                    <div class="col-md-6 mt-5 mb-5 about-img">
                         <img src="img/josefine.jpg" alt="image of Josefine" class="josefine-img">
                     </div>
                     <div class="col-md-6 mt-5 mb-5 about-col">
@@ -224,8 +224,9 @@
                         </div>
                         <br>
                         <br>
-                        <h5>Upon Wonder - Band website</h5>
-                        <p>Project description</p>
+                        <h5>Upon Wonder - Band Website</h5>
+                        <p>Milestone Project 1 for Code Institute</p>
+                        <small>User Centric Frontend Development</small>
                     </div>
                     <div class="col-md-6 mt-5 mb-5">
                         <div class="zoom">
@@ -235,8 +236,9 @@
                         </div>
                         <br>
                         <br>
-                        <h5>Plant Memory</h5>
-                        <p>Project description</p>
+                        <h5>Plant Memory - Game</h5>
+                        <p>Milestone Project 2 for Code Institute</p>
+                        <small>Interactive Frontend Development</small>
                     </div>
                 </div>
                 <div class="row text-center">
@@ -249,7 +251,8 @@
                         <br>
                         <br>
                         <h5>Kitchen - Recipe website</h5>
-                        <p>Project description</p>
+                        <p>Milestone Project 3 for Code Institute</p>
+                        <small>Data Centric Frontend Development</small>
                     </div>
                     <div class="col-md-6 mt-5 mb-5">
                         <div class="zoom">
@@ -260,7 +263,8 @@
                         <br>
                         <br>
                         <h5>Laura Day - E-commerce store</h5>
-                        <p>Project description</p>
+                        <p>Milestone Project 4 for Code Institute</p>
+                        <small>Full Stack Frontend Development</small>
                     </div>
                 </div>
                 <!-- Contact section -->
@@ -295,7 +299,7 @@
         <footer class="footer mt-auto bg-light">
             <div class="container footer-container">
                 <div class="row no-gutters">
-                    <div class="col-md-5 pt-3 pb-3 pl-3">
+                    <div class="col-md-5 pt-5 pb-5 pl-5">
                         <p class="text-uppercase font-weight-bold mb-0">Josefine Kihlström</p>
                         <p class="mb-0"><small>Junior Fullstack Developer</small></p>
                         <p class="mb-0"><small>+46 736 82 74 66</small></p>
