added navbar hover effect

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                      <a class="nav-link" href="#about-me">About Me</a>
-                      <a class="nav-link" href="#skills">Skills</a>
-                      <a class="nav-link" href="#work-edu">Work/Education</a>
-                      <a class="nav-link" href="#projects">Recent Projects</a>
-                      <a class="nav-link" href="#contact">Contact</a>
+                      <a class="nav-link nav-hover" href="#about-me">About Me</a>
+                      <a class="nav-link nav-hover" href="#skills">Skills</a>
+                      <a class="nav-link nav-hover" href="#work-edu">Work/Education</a>
+                      <a class="nav-link nav-hover" href="#projects">Recent Projects</a>
+                      <a class="nav-link nav-hover" href="#contact">Contact</a>
                     </div>
                   </div>
                 </div>
