added video as hero image

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                 <!-- Hero row -->
                 <div class="row">
                     <div class="col-12 hero-1">
+                        <video autoplay muted loop preload="auto" id="myVideo">
+                            <source src="img/video.mp4" type="video/mp4">
+                        </video>
                         <div class="hero-1-text">
                             <h1 class="text-white apple mb-4 josefine-text">Josefine Kihlström</h1>
                             <h3 class="text-white roboto text-uppercase line-1 anim-typewriter">Junior Full Stack Developer</h3>
@@ -79,7 +82,7 @@
                     </div>
                 </div>
                 <!-- Technical skills -->
-                <div class="row justify-content-center" id="skills">
+                <div class="row tech-row justify-content-center" id="skills">
                     <div class="col-md-6 mt-5 mb-5 roboto">
                         <h4 class="text-center text-uppercase letter-spacing">Technical Skills</h4>
                         <hr class="hr-w">
@@ -124,7 +127,7 @@
                 <!-- Work and education section -->
                 <div class="row" id="work-edu">
                     <!-- Work history -->
-                    <div class="col-lg-4 mb-5 p-5 work-col">
+                    <div class="col-lg-4 mb-0 p-5 work-col">
                         <h4 class="text-uppercase letter-spacing text-center">
                             Work History
                         </h4>
@@ -147,7 +150,7 @@
                         </ul>
                     </div>
                     <!-- Key Skills -->
-                    <div class="col-lg-4 mb-5 p-5 skills-col">
+                    <div class="col-lg-4 mb-0 p-5 skills-col">
                         <h4 class="text-uppercase letter-spacing text-center">
                             Key Skills
                         </h4>
@@ -191,7 +194,7 @@
                         </div>
                     </div>
                     <!-- Education -->
-                    <div class="col-lg-4 mb-5 p-5 education-col text-center">
+                    <div class="col-lg-4 mb-0 p-5 education-col text-center">
                         <h4 class=" text-uppercase letter-spacing">
                             Education
                         </h4>
@@ -207,15 +210,15 @@
                     </div>
                 </div>
                 <!-- Projects section -->
-                <div class="row" id="projects">
-                    <div class="col-12 text-center">
+                <div class="row project-row" id="projects">
+                    <div class="col-12 mt-5 text-center">
                         <h4 class="text-uppercase letter-spacing">
                             Recent Projects
                         </h4>
                         <hr class="hr-w">
                     </div>
                 </div>
-                <div class="row text-center">
+                <div class="row project-row text-center">
                     <div class="col-md-6 mt-5 mb-5">
                         <div class="zoom">
                             <a href="https://github.com/Josefinekihlstrom/Upon-Wonder" target="_blank">
@@ -241,7 +244,7 @@
                         <small>Interactive Frontend Development</small>
                     </div>
                 </div>
-                <div class="row text-center">
+                <div class="row project-row text-center">
                     <div class="col-md-6 mt-5 mb-5">
                         <div class="zoom">
                             <a href="https://github.com/Josefinekihlstrom/Kitchen" target="_blank">
